@@ -1,4 +1,5 @@
 0.02
+ - Add examples/ directory.
 
 0.01 2014-10-04T21:16:40+02:00
  - First version.
